# TaskFlow

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
src/: clima.py  tasks.py
tests/: test_clima_integracao.py  test_tasks.py
