[project]
name = "taskflow"
version = "1.0.0"
description = "Gerenciador de tarefas acadêmicas via CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
taskflow = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
